# CoreLog

./: CMakeLists.txt  CoreLog.h
CoreLog/: CoreLog.h
CoreLog/include/: CoreLog_Utils.h  Log.h  Logger.h
CoreLog/src/: Log.cpp  Logger.cpp
CoreLog/src/private/: os_functions.cpp  os_functions.h  os_functions_gnu_linux.cpp
include/: CoreLog_Utils.h  Log.h
src/: Logger.cpp
src/private/: os_functions.h
